<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/sfcscds"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/off"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:text="@string/off" />

    <Button
        android:id="@+id/on"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/off"
        android:layout_below="@+id/off"
        android:layout_marginTop="18dp"
        android:text="@string/on" />

    <Button
        android:id="@+id/flick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seekBar1"
        android:layout_alignLeft="@+id/seekBar1"
        android:layout_marginBottom="46dp"
        android:text="@string/flickon" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/flick"
        android:layout_alignLeft="@+id/on"
        android:layout_marginBottom="14dp"
        android:text="@string/flickoff" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/button1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:text="@string/flickerrate" />

</RelativeLayout>